--- a/app/views/imprint.html
+++ b/app/views/imprint.html
@@ -1,7 +1,7 @@
 <h2>Impressum</h2>
 <h3>Gemäß § 5 TMG</h3>
 
-<p><em>Hinweis:</em> Für generelle Supportanfragen ist die <a href="#">Community</a> gedacht. Dieses Impressum gilt auch für unseren <a href="https://twitter.com/DieShownotes">Twitter</a>- und <a href="https://alpha.app.net/shownotes">App.net</a>-Account.</p>
+<p><em>Hinweis:</em> Für generelle Supportanfragen ist die <a href="/community">Community</a> gedacht. Dieses Impressum gilt auch für unseren <a href="https://twitter.com/DieShownotes">Twitter</a>- und <a href="https://alpha.app.net/shownotes">App.net</a>-Account.</p>
 
 <h3>Anschrift</h3>
 
