--- a/app/views/document-readonly.html
+++ b/app/views/document-readonly.html
@@ -62,26 +62,31 @@
 
 	<h2>00:13:37 Und jetzt die Block-Ansicht</h2>
 
-	<span title="00:13:37.000: Lorem ipsum">Lorem ipsum</span>
-	<span title="00:13:37.000: dolor sit amet"><a href="#">dolor sit amet</a></span>
-	<span title="00:13:37.000: consetetur sadipscing elitr">consetetur sadipscing elitr</span>
-	<span title="00:13:37.000: sed diam nonumy eirmod tempor invidunt"><a href="#">sed diam nonumy eirmod tempor invidunt</a></span>
-	<span title="00:13:37.000: ut labore et dolore magna aliquyam erat"><a href="#">ut labore et dolore magna aliquyam erat</a></span>
-	<span title="00:13:37.000: sed diam voluptua">sed diam voluptua</span>
+	<span data-tooltip="00:13:37.000">Lorem ipsum</span>
+	<span data-tooltip="00:13:37.000"><a href="#">dolor sit amet</a></span>
+	<span data-tooltip="00:13:37.000">consetetur sadipscing elitr</span>
+	<span data-tooltip="00:13:37.000"><a href="#">sed diam nonumy eirmod tempor invidunt</a></span>
+	<span data-tooltip="00:13:37.000"><a href="#">ut labore et dolore magna aliquyam erat</a></span>
+	<span data-tooltip="00:13:37.000">sed diam voluptua</span>
 
 </div>
 
+<p>
+	Beispiel für Code-Ausgabe:
+</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+<pre>
+00:00:00.000 Intro: Kraftwerk - Number
+00:04:29.000 Die Anfänge des Chaosradios
+00:24:04.000 Die Struktur des CCC
+00:28:46.000 Fritz Nachrichten und Werbung
+00:50:40.000 Podcasts
+00:53:49.000 Das Chaos im Club
+00:59:12.000 Fritz Nachrichten und Werbung
+01:03:24.000 RFID, WLAN, WEP, Jabber
+01:27:50.000 Fritz Nachrichten und Werbung
+01:33:07.000 Nerd News, vorgelesen von Holger Klein
+01:41:33.000 Open Source und Sicherheit
+01:47:01.000 Wünsche für und Ausblick in die Zukunft
+01:57:04.000 Outro: Tracky Birthday (with Dragan Espenschied) - Website
+</pre>
