--- a/app/views/podcast.html
+++ b/app/views/podcast.html
@@ -1,6 +1,6 @@
 <div class="cover-header">
 
-	<a href="#"><img src="http://shownot.es/img/logos/cr_logo.png" alt="Chaosradio" class="cover" /></a>
+	<img src="http://shownot.es/img/logos/cr_logo.png" alt="Chaosradio" class="cover" />
 
 	<div>
 		<h2>Chaosradio</h2>
