--- a/app/views/sighting.html
+++ b/app/views/sighting.html
@@ -30,10 +30,10 @@
 	<div class="box-wrapper">
 		<h3>Helfer</h3>
 		<p class="namelist">
-			luto <a href="#" title="Löschen"><span class="icon-close"></span></a>,
-			Evita <a href="#" title="Löschen"><span class="icon-close"></span></a>,
-			Kai <a href="#" title="Löschen"><span class="icon-close"></span></a>,
-			EpicShownoter1337 <a href="#" title="Löschen"><span class="icon-close"></span></a>
+			<span>luto <a href="#" title="Löschen"><span class="icon-close"></span></a></span>,
+			<span>Evita <a href="#" title="Löschen"><span class="icon-close"></span></a></span>,
+			<span>Kai <a href="#" title="Löschen"><span class="icon-close"></span></a></span>,
+			<span>EpicShownoter1337 <a href="#" title="Löschen"><span class="icon-close"></span></a></span>
 		</p>
 		<form class="input-group">
 			<input type="text" value="" placeholder="Name" />
