--- a/app/views/community.html
+++ b/app/views/community.html
@@ -1,6 +1,6 @@
 <h2>Community</h2>
 
-<p>Zur Diskussion rund um Sendungsnotizen und diese Plattform bieten sich mehrere Möglichkeiten:</p>
+<p>Die Diskussion rund um Sendungsnotizen und diese Plattform kann auf mehreren Ebenen stattfinden:</p>
 
 <ul class="iconlist">
 	<li>
