--- a/app/views/livelist.html
+++ b/app/views/livelist.html
@@ -5,7 +5,7 @@
 		<span ng-hide="$root.currentUser">logge dich bitte ein und klicke dann</span>
 		<span ng-hide="!$root.currentUser">klicke</span>
 	auf <strong>Erstellen</strong> oder <strong>Mitschreiben</strong>.
-	<a href='/help'>Hast du noch Fragen?</a></p>
+	<a href='/faq'>Hast du noch Fragen?</a></p>
 </div>
 
 <table class="padlist">
