--- a/app/views/podcast.html
+++ b/app/views/podcast.html
@@ -9,6 +9,8 @@
 
 </div>
 
+<p>Durchschnitt: <strong>5 Podcaster</strong> und <strong>4 Shownoter</strong> pro Sendung</p>
+
 <table>
 	<tr>
 		<th>Episode</th>
