--- a/app/views/rules.html
+++ b/app/views/rules.html
@@ -1,6 +1,6 @@
 <h2>Regeln</h2>
 
-<p>Jedes registrierte Mitglied verpflichtet sich dazu, die folgenden Regeln einzuhalten:</p>
+<p>Jedes registrierte Mitglied verpflichtet sich dazu, die folgenden Regeln zu akzeptieren:</p>
 
 <ol class="rules">
 	<li>
@@ -17,11 +17,11 @@
 	</li>
 	<li>
 		<strong>Die Mitarbeit erfolgt auf freiwilliger Basis.</strong><br />
-		Wir bezahlen dich nicht. Eingenommene <a href="#">Spenden</a> kommen der Plattform zugute.</li>
+		Wir bezahlen dich nicht. Eingenommene <a href="/donate">Spenden</a> kommen der Plattform zugute.</li>
 	<li>
 		<strong>Spam ist absolut verboten.</strong><br />
 		Das gilt sowohl für den Editor und den dazugehörigen Chat, als auch für unseren IRC-Kanal und E-Mail-Verkehr.
 	</li>
 </ol>
 
-<p>Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen. Weitere Informationen finden sich bei den <a href="#">häufig gestellten Fragen</a>.</p>
+<p>Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen. Weitere Informationen finden sich bei den <a href="/faq">häufig gestellten Fragen</a>.</p>
