--- a/app/views/sighting.html
+++ b/app/views/sighting.html
@@ -73,7 +73,7 @@
 		<input type="file" name="coverupload" accept="image/*" />
 	</form>
 
-	<p><strong>Wichtig:</strong> Vor dem Hochladen bitte entsprechende Erlaubnis einholen</p>
+	<p><strong>Wichtig:</strong> Vor dem Hochladen bitte entsprechende Erlaubnis einholen. Ein Cover sollte mindestens 150 &times; 150 Pixel groß (und quadratisch) sein.</p>
 
 </div>
 
