--- a/app/views/community.html
+++ b/app/views/community.html
@@ -28,7 +28,7 @@
 		<span class="icon-github"></span>
 		<div>
 			<h3>GitHub</h3>
-			<p>Die komplette Plattform wird auf <a href="https://github.com/shownotes">GitHub</a> entwickelt. Wenn du dich daran beteiligen möchtest, kannst du dort gerne vorbeischauen.</p>
+			<p>Die komplette Plattform wird öffentlich auf <a href="https://github.com/shownotes">GitHub</a> entwickelt. Wenn du dich daran beteiligen möchtest, kannst du dort gerne vorbeischauen.</p>
 		</div>
 	</li>
 </ul>
