--- a/app/views/faq.html
+++ b/app/views/faq.html
@@ -1,4 +1,24 @@
 <h2>Häufig gestellte Fragen</h2>
 
-<p><strong>Frage:</strong> Wird diese Seite noch überarbeitet?</p>
-<p>Antwort: <em>Ja!</em></p>
+<div class="box-wrapper">
+
+	<h3>Fragenübersicht</h3>
+
+	<ul>
+		<li><a href="/faq#shownotes">Was ist shownot.es?</a></li>
+		<li><a href="/faq#sendungsnotizen">Was genau sind Sendungsnotizen?</a></li>
+	</ul>
+
+	<p>Deine Frage ist nicht dabei? Wende dich an die <a href="/community">Community</a> oder schick uns eine <a href="mailto:team@shownot.es">E-Mail</a>!</p>
+
+</div>
+
+<p id="shownotes">
+	<strong>Was ist shownot.es?</strong><br />
+	<em>shownot.es</em> ist eine <a href="https://de.wikipedia.org/wiki/Crowdsourcing">kollaborative</a> Plattform, auf der <a href="https://de.wikipedia.org/wiki/Podcasting#Sendungsnotizen">Sendungsnotizen</a> (engl. <em><q>show notes</q></em>) für <a href="https://de.wikipedia.org/wiki/Podcasting">Podcasts</a> verfasst werden. Freiwillige Helfer (<em><q>Shownoter</q></em>) hören sich gemeinsam Sendungen an und schreiben Stichpunkte mit, sammeln Links oder suchen weitere Informationen.
+</p>
+
+<p id="sendungsnotizen">
+	<strong>Was genau sind Sendungsnotizen?</strong><br />
+	Sendungsnotizen sind <a href="https://de.wikipedia.org/wiki/Metadaten">Metadaten</a> von Podcasts. Sie enthalten nicht den Podcast selbst, aber beschreibende Informationen, die in der Regel mit einer Zeitangabe versehen sind. Dadurch werden die Inhalte von reinen Audioformaten durchsuchbar.
+</p>
