--- a/app/views/donate.html
+++ b/app/views/donate.html
@@ -2,7 +2,7 @@
 
 <p><em>shownot.es</em> finanziert sich komplett durch freiwillige Spenden. Das eingenommene Geld kommt vollständig dem Projekt zugute &mdash; sei es für Webspace, Domain, SSL-Zertifikat oder (einen Teil) der anfallenden Reisekosten für einen Workshop. </p>
 
-<p><strong>Wichtig:</strong> Die freiwilligen Helfer können leider nicht bezahlt werden. Es wäre unmöglich, jedem einen fairen Anteil zu geben. Die Podcaster sind als Alternative dazu angeregt, beispielsweise den <a href="https://flattr.com">Flattr</a>-Button der einzelnen Shownoter unter ihre Sendungen zu setzen.</p>
+<p><strong>Wichtig:</strong> Die freiwilligen Helfer können leider <a href="faq#bezahlung">nicht bezahlt</a> werden. Es wäre unmöglich, jedem einen fairen Anteil zu geben. Die Podcaster sind als Alternative dazu angeregt, beispielsweise den <a href="https://flattr.com">Flattr</a>-Button der einzelnen Shownoter unter ihre Sendungen zu setzen.</p>
 
 <ul class="iconlist">
 	<li>
