--- a/app/views/faq.html
+++ b/app/views/faq.html
@@ -2,16 +2,33 @@
 
 <div class="box-wrapper">
 
-	<h3>Fragenübersicht</h3>
+	<h3>Allgemeine Fragen</h3>
 
 	<ul>
 		<li><a href="/faq#shownotes">Was ist shownot.es?</a></li>
-		<li><a href="/faq#sendungsnotizen">Was genau sind Sendungsnotizen?</a></li>
+		<li><a href="/faq#sendungsnotizen">Was sind Sendungsnotizen?</a></li>
+		<li><a href="/faq#osf">Was ist OSF?</a></li>
+		<li><a href="/faq#entwickeln">Kann ich dabei helfen, shownot.es weiterzuentwickeln?</a></li>
+	</ul>
+
+	<h3>Fragen von Shownotern</h3>
+
+	<ul>
+		<li><a href="/faq#helfen">Wie kann ich mich beteiligen?</a></li>
+		<li><a href="/faq#bezahlung">Wieso bekomme ich als Helfer kein Geld?</a></li>
+	</ul>
+
+	<h3>Fragen von Podcastern</h3>
+
+	<ul>
+		<li><a href="/faq#">&hellip;</a></li>
 	</ul>
 
 	<p>Deine Frage ist nicht dabei? Wende dich an die <a href="/community">Community</a> oder schick uns eine <a href="mailto:team@shownot.es">E-Mail</a>!</p>
 
 </div>
+
+<h3>Allgemeine Antworten</h3>
 
 <p id="shownotes">
 	<strong>Was ist shownot.es?</strong><br />
@@ -19,6 +36,37 @@
 </p>
 
 <p id="sendungsnotizen">
-	<strong>Was genau sind Sendungsnotizen?</strong><br />
+	<strong>Was sind Sendungsnotizen?</strong><br />
 	Sendungsnotizen sind <a href="https://de.wikipedia.org/wiki/Metadaten">Metadaten</a> von Podcasts. Sie enthalten nicht den Podcast selbst, aber beschreibende Informationen, die in der Regel mit einer Zeitangabe versehen sind. Dadurch werden die Inhalte von reinen Audioformaten durchsuchbar.
+</p>
+
+<p id="osf">
+	<strong>Was ist OSF?</strong><br />
+	<q>OSF</q> steht für <em><q>Open Shownotes Format</q></em>. Dieses von uns definierte Format soll die Erstellung von Sendungsnotizen erleichtern und standardisieren. Beispiel für eine Zeile in OSF:<br />
+	<code>00:13:37 Geofencing &lt;https://de.wikipedia.org/wiki/Geofencing&gt; #g</code><br />
+	Von links nach rechts: <em>Zeitstempel</em>, <em>Textangabe</em>, <em>Link</em>, <em>Tag</em>. Eine <a href="#">ausführliche Dokumentation</a> gibt es auch.
+</p>
+
+<p id="entwickeln">
+	<strong>Kann ich dabei helfen, die shownot.es weiterzuentwickeln?</strong><br />
+	Selbstverständlich! Wir sind ständig auf der Suche nach neuen Entwicklern. Ein <a href="https://github.com/shownotes">GitHub</a>-Account ist dafür die einzige Voraussetzung.
+</p>
+
+<h3>Antworten an Shownoter</h3>
+
+<p id="helfen">
+	<strong>Wie kann ich mich beteiligen?</strong><br />
+	Antwort
+</p>
+
+<p id="bezahlung">
+	<strong>Wieso bekomme ich als Helfer kein Geld?</strong><br />
+	<em>shownot.es</em> ist ein Projekt von Freiwilligen für Freiwillige. Die <a href="/donate">Spenden</a> reichen, um anfallende Kosten zu decken &mdash; die faire Bezahlung von selbst einer einzigen Person ist hingegen utopisch. Zudem haben mehrere Diskussionen ergeben, dass eine Kommerzialisierung der Plattform nicht gewünscht ist.
+</p>
+
+<h3>Antworten an Podcaster</h3>
+
+<p id="">
+	<strong>&hellip;</strong><br />
+	Antwort
 </p>
