--- a/app/views/faq.html
+++ b/app/views/faq.html
@@ -8,8 +8,11 @@
 		<li><a href="/faq#shownotes">Was ist shownot.es?</a></li>
 		<li><a href="/faq#sendungsnotizen">Was sind Sendungsnotizen?</a></li>
 		<li><a href="/faq#osf">Was ist OSF?</a></li>
+		<li><a href="/faq#englisch">Gibt es diese Plattform auch auf Englisch?</a></li>
 		<li><a href="/faq#entwickeln">Kann ich dabei helfen, shownot.es weiterzuentwickeln?</a></li>
 	</ul>
+
+	<hr />
 
 	<h3>Fragen von Shownotern</h3>
 
@@ -18,10 +21,15 @@
 		<li><a href="/faq#bezahlung">Wieso bekomme ich als Helfer kein Geld?</a></li>
 	</ul>
 
+	<hr />
+
 	<h3>Fragen von Podcastern</h3>
 
 	<ul>
-		<li><a href="/faq#">&hellip;</a></li>
+		<li><a href="/faq#">Welchen Vorteil haben Sendungsnotizen?</a></li>
+		<li><a href="/faq#podcast">Wie kommt mein Podcast auf shownot.es?</a></li>
+		<li><a href="/faq#">Wie überzeuge ich meine Hörer, Sendungsnotizen zu schreiben?</a></li>
+		<li><a href="/faq#">Bin ich dazu verpflichtet, die Helfer zu nennen oder zu belohnen?</a></li>
 	</ul>
 
 	<p>Deine Frage ist nicht dabei? Wende dich an die <a href="/community">Community</a> oder schick uns eine <a href="mailto:team@shownot.es">E-Mail</a>!</p>
@@ -61,7 +69,8 @@
 
 <p id="bezahlung">
 	<strong>Wieso bekomme ich als Helfer kein Geld?</strong><br />
-	<em>shownot.es</em> ist ein Projekt von Freiwilligen für Freiwillige. Die <a href="/donate">Spenden</a> reichen, um anfallende Kosten zu decken &mdash; die faire Bezahlung von selbst einer einzigen Person ist hingegen utopisch. Zudem haben mehrere Diskussionen ergeben, dass eine Kommerzialisierung der Plattform nicht gewünscht ist.
+	<em>shownot.es</em> ist ein Projekt von Freiwilligen für Freiwillige. Die <a href="/donate">Spenden</a> reichen, um anfallende Kosten zu decken &mdash; die faire <q>Bezahlung</q> von selbst einer einzigen Person ist hingegen utopisch.<br />
+	Wenn Podcaster dich für deine Arbeit entlohnen oder <a href="https://flattr.com/">flattern</a>
 </p>
 
 <h3>Antworten an Podcaster</h3>
