--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,1 +1,48 @@
-<h2>Administration</h2>
+<h2>Schwarzes Brett</h2>
+<h3><a href="#">Bearbeiten</a></h3>
+
+<hr />
+
+<h3>Konferenzen</h3>
+
+<p></p>
+
+<p>
+	<strong>12. Juli 2014:</strong> Konferenz 13<br />
+	<strong>16. August 2014:</strong> Konferenz 14<br />
+	<strong>13. September 2014:</strong> Konferenz 15<br />
+	<strong>15. Oktober 2014:</strong> Konferenz 16<br />
+	<strong>11. November 2014:</strong> Konferenz 17<br />
+	<strong>13. Dezember 2014:</strong> Konferenz 18<br />
+</p>
+
+<table>
+	<tr>
+		<th>Priorität</th>
+		<th>Hoster</th>
+		<th>Server</th>
+		<th>Port</th>
+	</tr>
+	<tr>
+		<td>Primär</td>
+		<td><a href="https://shownot.es">Shownot.es</a></td>
+		<td>mumble.shownot.es</td>
+		<td>64738</td>
+	</tr>
+	<tr>
+		<td>Sekundär</td>
+		<td><a href="http://podwg.de">PodWG</a></td>
+		<td>178.33.168.91</td>
+		<td>11034</td>
+	</tr>
+	<tr>
+		<td>Tertiär</td>
+		<td><a href="http://blog.fastreboot.de">Dr4k3</a></td>
+		<td>fastreboot.de</td>
+		<td>64738</td>
+	</tr>
+</table>
+
+<p>Weitere Informationen, bliblablo &hellip;</p>
+
+<img src="http://i.imgur.com/PMwkUpf.png" alt="Katzi" style="position: absolute; right: 0; bottom: 0; z-index: -1; opacity: .25;">
