--- a/app/views/user/upgrade.html
+++ b/app/views/user/upgrade.html
@@ -15,7 +15,7 @@
 			<input id="checkrules-upgrade" type="checkbox" value="checkrules" ng-model="upgrade.rules" />
 			<label for="checkrules-upgrade">Ich akzeptiere die <a href="/rules">Regeln</a>.</label>
 		</div>
-		<input type="submit" value="Änderungen speichern" ng-click="doUpgrade()" />
+		<input type="submit" value="Speichern und fortfahren" ng-click="doUpgrade()" />
 	</form>
 </div>
 
