readonly mode! switched to nunjucks templating

--- a/app/views/document-readonly.html
+++ b/app/views/document-readonly.html
@@ -17,93 +17,5 @@
 
 <hr />
 
-	<div ng-if="format.type == 'html'">
-{{content.html}}
-	</div>
-
-	<pre ng-if="format.type == 'osf'">
-{{content.osf}}
-	</pre>
-
-	<pre ng-if="format.type == 'plain'">
-{{content.raw}}
-	</pre>
-
-<div class="document-list">
-
-	<h2><span>00:00:00</span> <a href="https://www.youtube.com/watch?v=XQKGWw-ZTaw">Intro: Kraftwerk - Number</a></h2>
-
-	<ul>
-		<li>
-			<span data-tooltip="00:13:37.000">Heute mit</span>
-			<ul>
-				<li><a href="#" data-tooltip="00:13:37.000">Andreas Steinhauser (Steini)</a></li>
-				<li><a href="#" data-tooltip="00:13:37.000">Tim Pritlove</a></li>
-				<li><a href="#" data-tooltip="00:13:37.000">Marcus Richter</a></li>
-				<li><a href="#" data-tooltip="00:13:37.000">Erdgeist</a></li>
-			</ul>
-		</li>
-	</ul>
-
-	<h2><span>00:04:29</span> Die Anfänge des Chaosradios</h2>
-
-	<ul>
-		<li>
-			<span data-tooltip="00:13:37.000">Niemand hat die erste Chaosradio-Folge archiviert</span>
-			<ul>
-				<li><a href="#" data-tooltip="00:13:37.000">Die bisherigen Sendungen sind hier abrufbar</a></li>
-			</ul>
-		</li>
-	</ul>
-
-</div>
-
-<p>Beispiel für Block-Ansicht:</p>
-
-<div class="document-block">
-
-	<dl>
-		<dt>00:13:37</dt>
-		<dd>
-			<h2>Ein paar Blöcke</h2>
-			<span data-tooltip="00:13:37.000">Lorem ipsum</span>
-			<span data-tooltip="00:13:37.000"><a href="#">dolor sit amet</a></span>
-			<span data-tooltip="00:13:37.000">consetetur sadipscing elitr</span>
-			<span data-tooltip="00:13:37.000"><a href="#">sed diam nonumy eirmod tempor invidunt</a></span>
-			<span data-tooltip="00:13:37.000"><a href="#">ut labore et dolore magna aliquyam erat</a></span>
-			<span data-tooltip="00:13:37.000">sed diam voluptua</span>
-		</dd>
-	</dl>
-
-	<dl>
-		<dt>00:14:37</dt>
-		<dd>
-			<h2>Noch mehr Blöcke</h2>
-			<span data-tooltip="00:14:37.000">Lorem ipsum</span>
-			<span data-tooltip="00:14:37.000"><a href="#">dolor sit amet</a></span>
-			<span data-tooltip="00:14:37.000">consetetur sadipscing elitr</span>
-			<span data-tooltip="00:14:37.000"><a href="#">sed diam nonumy eirmod tempor invidunt</a></span>
-		</dd>
-	</dl>
-
-</div>
-
-<p>
-	Beispiel für Code-Ausgabe:
-</p>
-
-<pre>
-00:00:00.000 Intro: Kraftwerk - Number
-00:04:29.000 Die Anfänge des Chaosradios
-00:24:04.000 Die Struktur des CCC
-00:28:46.000 Fritz Nachrichten und Werbung
-00:50:40.000 Podcasts
-00:53:49.000 Das Chaos im Club
-00:59:12.000 Fritz Nachrichten und Werbung
-01:03:24.000 RFID, WLAN, WEP, Jabber
-01:27:50.000 Fritz Nachrichten und Werbung
-01:33:07.000 Nerd News, vorgelesen von Holger Klein
-01:41:33.000 Open Source und Sicherheit
-01:47:01.000 Wünsche für und Ausblick in die Zukunft
-01:57:04.000 Outro: Tracky Birthday (with Dragan Espenschied) - Website
-</pre>
+<div ng-if="format.type == 'html'" class="document-{{format.name}}" ng-bind-html="content"></div>
+<pre ng-if="format.type == 'osf' || format.type == 'plain'">{{content}}</pre>
