add documentEditor directive to handle editor iframes

--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -46,8 +46,8 @@
 
 		</div>
 
-		<div class="editor" ng-show="editor">
-			<iframe src="{{docurl}}"></iframe>
+		<div class="editor">
+			<document-editor document="doc"></document-editor>
 		</div>
 
 	</div>
