introduce name-list directive
holds a list of names, used by podcaster and shownoter lists
use in sighting for both lists
use in document-edit for podcaster list
add deleting to podcaster list in document-edit

--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -33,14 +33,8 @@
 
 			<div class="shownotes-meta">
 
-				<p><strong>Podcaster</strong>:
-					<span ng-repeat="podcaster in doc.meta.podcasters">{{podcaster.name}}</span>
-					<span ng-show="doc.meta.podcasters.length == 0">Noch keine</span>
-				</p>
-				<form class="input-group">
-					<input type="text" value="" placeholder="Name" ng-model="newpodcaster.name" />
-					<input class="small" type="submit" value="Hinzufügen" ng-click="addPodcaster()" />
-				</form>
+				<p><strong>Podcaster</strong>:</p>
+				<name-list names="doc.meta.podcasters" name-attr="name" add-name="addPodcaster" del-name="removePodcaster"></name-list>
 
 			</div>
 
