--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -988,8 +988,8 @@ nav li > input[type="checkbox"] {
 	margin-left: -2em;
 }
 .editor > iframe {
-  width: 100%;
-  height: 300px;
+	width: 100%;
+	height: 100%;
 }
 
 /* Chat */
