tiny chnages. you won't even notice them.
I’m too lazy right now.

--- a/app/components/document/sighting/document-sighting.html
+++ b/app/components/document/sighting/document-sighting.html
@@ -58,10 +58,16 @@
 
 	<hr />
 
-	<h3>Cover hochladen</h3>
+	<h3>Cover einbinden</h3>
 
 	<form class="form-wrapper">
 		<input type="file" name="coverupload" accept="image/*" />
+	</form>
+
+	<p>oder</p>
+
+	<form>
+		<input type="text" id="coverurl" placeholder="Cover-URL eingeben" />
 	</form>
 
 	<p><strong>Wichtig:</strong> Vor dem Hochladen bitte entsprechende Erlaubnis einholen. Ein Cover sollte mindestens 150 &times; 150 Pixel groß (und quadratisch) sein.</p>
