--- a/app/components/static/community.html
+++ b/app/components/static/community.html
@@ -7,7 +7,7 @@
 		<span class="icon-mail"></span>
 		<div>
 			<h3>Mailingliste</h3>
-			<p>Unsere <a href="#">Mailingliste</a> bietet die Möglichkeit zum Austausch von Shownotern und Podcastern.</p>
+			<p>Unsere öffentliche <a href="#">Mailingliste</a> bietet die Möglichkeit zum Austausch von Shownotern und Podcastern.</p>
 		</div>
 	</li>
 	<li>
@@ -21,7 +21,7 @@
 		<span class="icon-bubble"></span>
 		<div>
 			<h3>Internet Relay Chat</h3>
-			<p>Auf Freenode betreiben wir den IRC-Channel <a href="irc://chat.freenode.net/shownotes">#shownotes</a>. Du kannst dich über einen <a href="http://de.wikipedia.org/wiki/IRC-Client#G.C3.A4ngige_IRC-Clients">IRC-Client</a> oder dem <a href="https://kiwiirc.com/client/irc.freenode.net/shownotes">Webchat</a> verbinden.</p>
+			<p>Auf Freenode sind wir im IRC-Channel <a href="irc://chat.freenode.net/shownotes">#shownotes</a> zu finden. Du kannst dich über einen <a href="http://de.wikipedia.org/wiki/IRC-Client#G.C3.A4ngige_IRC-Clients">IRC-Client</a> oder dem <a href="https://kiwiirc.com/client/irc.freenode.net/shownotes">Webchat</a> verbinden.</p>
 		</div>
 	</li>
 	<li>
