--- a/app/components/document/readonly/document-readonly.html
+++ b/app/components/document/readonly/document-readonly.html
@@ -5,7 +5,7 @@
 	<div>
 		<h2>{{episode.podcast.title}} {{episode.number}}</h2>
 		<h3>{{episode.date}}</h3>
-		<a href="/doc/{{doc.name}}">Bearbeiten</a>
+		<a ui-sref="document-edit({ name: doc.name })">Bearbeiten</a>
 	</div>
 
 </div>
