--- a/app/components/livelist/livelist.html
+++ b/app/components/livelist/livelist.html
@@ -21,7 +21,7 @@
 		<td>{{ ep.number || 'noch keines' }}</td>
 		<td>
 			<input type="button" value="Erstellen" ng-show="!ep.document" ng-click="create(ep)" ng-disabled="!$root.currentUser">
-			<a ng-href="{{docurl(ep.document.name)}}" ng-show="ep.document"><input type="button" value="Mitschreiben"></a>
+			<input type="button" value="Mitschreiben" ng-show="ep.document" ng-click="openDoc(ep)">
 		</td>
 	</tr>
 	<tr ng-show="episodes.length == 0">
