--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -5,7 +5,7 @@
     </a></h1>
 </header>
 
-<nav class="account">
+<nav class="account" ng-controller="SidebarCrtl">
     <ul>
         <li>
             <label class="toggle" for="toggle-form" title="Mein Account">
