nicer text for hörsuppe-attribution in livelist

--- a/app/components/livelist/livelist.html
+++ b/app/components/livelist/livelist.html
@@ -31,7 +31,7 @@
 	</tr>
 </table>
 
-<p>Die Termine stammen aus dem <a href="http://hoersuppe.de/kalender/">Hörsuppe-Kalender</a>.</p>
+<p>Die meister dieser Termine stammen aus dem <a href="http://hoersuppe.de/kalender/">Hörsuppe-Kalender</a>. Danke eazy!</p>
 
 <footer>
 
