--- a/app/components/document/readonly/document-readonly.html
+++ b/app/components/document/readonly/document-readonly.html
@@ -10,12 +10,4 @@
 
 </div>
 
-<div class="button-group">
-	<button ng-repeat="f in formats" ng-disabled="format == f" ng-click="enableFormat(f)">{{f.caption}}</button>
-	<button title="HTML herunterladen"><span class="icon-arrow-down" ng-click="download()"></span></button>
-</div>
-
-<hr />
-
-<div ng-if="format.type == 'html'" class="document-{{format.name}}" ng-bind-html="content"></div>
-<pre ng-if="format.type == 'osf' || format.type == 'plain'">{{content}}</pre>
+<document-render document="doc" show-formats="true"></document-render>
